# insights-results-aggregator-utils

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CODEOWNERS  Dockerfile  Makefile  README.md  config_dev.toml  dev.conf  go.mod  go.sum  gocyclo.sh  gosec.sh  run.sh  run_pycodestyle.py  setup.cfg  setup.py
.tekton/: insights-results-aggregator-utils-e952b-pull-request.yaml  insights-results-aggregator-utils-e952b-push.yaml
anim/: anim.go  anim_aggregator_consumer.go  anim_external_data_pipeline.go  anim_smart_proxy.go  insights_operator_prometheus.go  insights_operator_pull_only.go  insights_operator_to_web_console.go
checks/: json_check.py  open_api_check.py
ci/: issue.py
converters/: edn2json.py  json2edn.py
database/: cleanup_old_results.py
docs/: 2report.html  _config.yml  affected_clusters.html  anim_aggregator_consumer.html  anim_smart_proxy.html  anonymize.html  gen_broken_jsons.html  gen_broken_messages.html  index.md  issue.html  manifest.txt  random_payload_generator.html  run_pycodestyle.html
exporter/: README.md  duplicate.sql  meassure_exporter_consumption.sh  ploter.py  results.csv
http/: router_utils.go
input/: 2report.py  anonymize.py  gen_broken_jsons.py  gen_broken_messages.py  gen_messages.py  produce.sh  produce_50k_messages.sh  random_payload_generator.py
kafka/: tlsconfig.go
kubernetes/: gen_cert_key.py
load_tester/: locustfile.py
logs/: anonymize_aggegator_log.py  anonymize_aggregator_log.py  anonymize_ccx_pipeline_log.py
monitoring/: go_metrics.py  kafka_lags.py  processing_time.py
on_demand_data_gathering/: README.md  cluster_names.go  cluster_names.txt  go.mod  go.sum  publisher.go  reader.go  redis.cfg  request_ids.go
reports/: affected_clusters.py  cluster_id_distribution.py  cluster_results_age.py  cluter_results_age.py  reports.py  (+7 more)
(+25 files in other folders)
