[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D301, D212, D203

[metadata]
name = aggregator-utils
description = Utils for performing stage testing and load testing
url = https://github.com/RedHatInsights/insights-results-aggregator-utils
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
zip_safe = False
include_package_data = True
package_dir =
    =stage_tester
packages = find:
setup_requires =
    setuptools_scm>=3.0.0
install_requires =
    locust
    gevent
    pandas
    matplotlib

[options.packages.find]
exclude =
    docs*
