[pycodestyle]
max-line-length = 100

[pydocstyle]
ignore = D301, D212, D203

[metadata]
name = aggregator-utils
description = Utilities for Insights Results Aggregator
url = https://github.com/RedHatInsights/insights-results-aggregator-utils
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
zip_safe = False
include_package_data = True
package_dir =
    =.
packages = find:
setup_requires =
    setuptools_scm>=3.0.0
    wheel
install_requires =
    locust
    gevent
    pandas
    matplotlib
    dynaconf
    cached_property

[options.packages.find]
exclude =
    docs*

[options.entry_points]
console_scripts =
    st = stage_tester.st:main
    pta = stage_tester.pta:main
    st_xlsx = stage_tester.st_xlsx:main
